
  [ Benjamin Drung ]
  * suspicious-source:
    - Add .icns and .java to extension whitelist.
    - Add image/vnd.adobe.photoshop to the mime-type whitelist.
  * data/debian.csv: Add wheezy and release date of squeeze.
  * *distro-info: Add a "created" column to the data.

  [ Stefano Rivera ]
  * debian/copyright:
    - Files is space-separated, not comma.
    - Bump Format revision.

 -- Benjamin Drung <bdrung@debian.org>  Sun, 06 Feb 2011 16:47:41 +0100

ubuntu-dev-tools (0.115) unstable; urgency=low

  [ Stefano Rivera ]
  * Catch DownloadErrors in ubuntutools.archive users. (LP: #708862)

  [ Scott Kitterman ]
  * Update requestsync to send to Launchpad's MX record instead of hard
    coding to the old MX (fiordland) (LP: #710925)
  * Recommend python-dns

 -- Benjamin Drung <bdrung@debian.org>  Tue, 01 Feb 2011 13:58:07 +0100

ubuntu-dev-tools (0.114) unstable; urgency=low

  [ Stefano Rivera ]
  * ubuntutools.archive: Handle source package in workdir correctly.
    Add regression tests. (LP: #706403)
  * syncpackage: Don't fakesync when we have a new orig tarball (LP: #707187)

  [ Dustin Kirkland ]
  * debian/control, debian/copyright, doc/errno.1, errno, setup.py:
    - purge the errno utility per request of the ubuntu-dev-tools
      maintainer;  errno now provided by the 'errno' package; (LP: #666540)

  [ Benjamin Drung ]
  * wrap-and-sort: Add option to use on individual file (LP: #699696).
  * update_maintainer.py: Process control.in first.

 -- Benjamin Drung <bdrung@debian.org>  Tue, 25 Jan 2011 22:58:05 +0100

ubuntu-dev-tools (0.113) unstable; urgency=low

  [ Benjamin Drung ]
  * debian-distro-info, distro-info, ubuntu-distro-info: New tools.
  * Use new ubuntutools.distro_info in various scripts.

  [ Stefano Rivera ]
  * backportpackage: dput correct changes filename (regression in 0.112)
    (LP: #706010)
  * Use new *-distro-info in:
    - bash_completion/pbuilder-dist: To determine pbuilder file names.
    - dch-repeat.